# console-tetris

./: .gitignore  CMakeLists.txt  README.md
ConsoleApplication4/: CMakeLists.txt  biblioteki.h  game.c  gra.h  main.c  opcje.c  opcje.h  score.c  wynik.h
ConsoleApplication4/graphics/: draw.h
ConsoleApplication4/graphics/src/: CMakeLists.txt  draw.c
ConsoleApplication4/input/: keys.h
ConsoleApplication4/input/src/: CMakeLists.txt  keys.c
